--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,6 +15,11 @@
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
           <a class="navbar-brand" href="{{ url('app_cake_list') }}">Mamandine</a>
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="{{ path('app_cake_create') }}">Create cake</a>
+            </li>
+          </ul>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -28,6 +33,17 @@
             </form>
           </div>
         </nav>
+        {% if app.session.flashbag.peekAll %}
+            <div class="alert alert-primary text-center" role="alert">
+                {% for name, messages in app.session.flashbag.all %}
+                    {% for message in messages %}
+                        <div class="alert {{ name }}">
+                            {{ message }}
+                        </div>
+                    {% endfor %}
+                {% endfor %}
+            </div>
+        {% endif %}
         {% block body %}{% endblock %}
         <div class="navbar navbar-light">
             <div class="container">
