--- a/templates/cake/create.html.twig
+++ b/templates/cake/create.html.twig
@@ -1,33 +1,29 @@
-{% extends 'base.html.twig' %}
+{% extends 'layout.html.twig' %}
 
-{% block body %}
-    <div id="container">
-        <section class="container">
-            <article>
-                <form method="post" enctype="multipart/form-data">
-                    <div class="form-group">
-                        <label for="name">Cake name</label>
-                        <input type="text" name="name" class="form-control" id="name" placeholder="Cake name" />
-                    </div>
-                    <div class="form-group">
-                        <label for="description">Description</label>
-                        <textarea id="description" name="description" class="form-control" rows="3"></textarea>
-                    </div>
-                    <div class="form-group">
-                        <label for="price">Price</label>
-                        <div class="input-group">
-                            <input type="number" name="price" class="form-control" id="price" placeholder="32.00" />
-                            <span class="input-group-addon">€</span>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="image">Image</label>
-                        <input type="text" class="form-control" name="image" id="image">
-                    </div>
+{% block content %}
+<section class="container">
+    <article>
+        {{ form_start(form) }}
+            {{ form_errors(form) }}
+            <div class="form-group">
+                {{ form_row(form.name, { 'attr': { 'class' : 'form-control' }}) }}
+            </div>
+            <div class="form-group">
+                {{ form_row(form.description, { 'attr': { 'class' : 'form-control' }}) }}
+            </div>
+            <div class="form-group">
+                {{ form_label(form.price) }}
+                <div class="input-group">
+                    {{ form_widget(form.price, { 'attr': { 'class' : 'form-control' }}) }}
+                    <span class="input-group-addon">€</span>
+                </div>
+            </div>
+            <div class="form-group">
+                {{ form_row(form.image, { 'attr': { 'class' : 'form-control' }}) }}
+            </div>
 
-                    <input type="submit" value="Create" class="btn btn-primary">
-                </form>
-            </article>
-        </section>
-    </div>
+            <input type="submit" value="Create" class="btn btn-primary">
+        {{ form_end(form) }}
+    </article>
+</section>
 {% endblock %}
