--- a/templates/cake/list.html.twig
+++ b/templates/cake/list.html.twig
@@ -1,6 +1,6 @@
-{% extends 'base.html.twig' %}
+{% extends 'layout.html.twig' %}
 
-{% block body %}
+{% block content %}
     <div id="container">
         <section class="container">
             <h3>Cakes list</h3>
