--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -44,7 +44,7 @@
                 {% endfor %}
             </div>
         {% endif %}
-        {% block body %}{% endblock %}
+        {% block content %}{% endblock %}
         <div class="navbar navbar-light">
             <div class="container">
                 <p class="navbar-text text-center">Mamandine - In cookies we trust.</p>
