--- a/templates/cake/create.html.twig
+++ b/templates/cake/create.html.twig
@@ -4,12 +4,13 @@
 <section class="container">
     <article>
         {{ form_start(form) }}
-            {{ form_errors(form) }}
             <div class="form-group">
                 {{ form_row(form.name, { 'attr': { 'class' : 'form-control' }}) }}
+                {{ form_errors(form.name) }}
             </div>
             <div class="form-group">
                 {{ form_row(form.description, { 'attr': { 'class' : 'form-control' }}) }}
+                {{ form_errors(form.description) }}
             </div>
             <div class="form-group">
                 {{ form_label(form.price) }}
@@ -17,12 +18,14 @@
                     {{ form_widget(form.price, { 'attr': { 'class' : 'form-control' }}) }}
                     <span class="input-group-addon">€</span>
                 </div>
+                {{ form_errors(form.price) }}
             </div>
             <div class="form-group">
                 {{ form_row(form.image, { 'attr': { 'class' : 'form-control' }}) }}
+                {{ form_errors(form.image) }}
             </div>
 
-            <input type="submit" value="Create" class="btn btn-primary">
+            <input type="submit" value="Submit" class="btn btn-primary">
         {{ form_end(form) }}
     </article>
 </section>
