--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -14,24 +14,26 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <a class="navbar-brand" href="{{ url('app_cake_list') }}">Mamandine</a>
+          <a class="navbar-brand" href="{{ url('cake_list') }}">Mamandine</a>
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="{{ path('app_cake_create') }}">Create cake</a>
-            </li>
+            {% if is_granted('ROLE_ADMIN') %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('cake_create') }}">Create cake</a>
+                </li>
+            {% endif %}
           </ul>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                {% if not app.user %}
+                    <a class="nav-link" href="{{ path('app_login') }}">Login</a>
+                {% else %}
+                    <a class="nav-link" href="{{ path('app_logout') }}">Logout</a>
+                {% endif %}
+                </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0">
-              <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
-          </div>
         </nav>
         {% if app.session.flashbag.peekAll %}
             <div class="alert alert-primary text-center" role="alert">
