--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -25,6 +25,16 @@
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
+            <form action="{{ path('cake_search') }}" class="form-inline my-2 my-lg-0">
+                <input
+                    type="search"
+                    name="q"
+                    class="form-control mr-sm-2"
+                    placeholder="Search..."
+                    aria-label="Search"
+                >
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
             <ul class="navbar-nav">
                 <li class="nav-item">
                 {% if not app.user %}
