feat: implement workflow component

--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -21,6 +21,9 @@
                     <a class="nav-link" href="{{ path('cake_create') }}">Create cake</a>
                 </li>
             {% endif %}
+            <li class="nav-item">
+                <a class="nav-link" href="{{ path('order_list') }}">Orders</a>
+            </li>
           </ul>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
