--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -32,6 +32,7 @@
                     class="form-control mr-sm-2"
                     placeholder="Search..."
                     aria-label="Search"
+                    value="{{ app.request.query.get('q') }}"
                 >
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
