--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -53,6 +53,8 @@
             </div>
         </div>
         {% block javascripts %}
+
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
             {{ encore_entry_script_tags('app') }}
 
             <!-- Renders app.js & a webpack runtime.js file
